# bike-rental-django

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
WildWheel/: asgi.py  settings.py  urls.py  wsgi.py
WildWheel/WildWheel/: settings.py  urls.py
WildWheel/core/: adapters.py  convert_to_webp.py  forms.py  models.py  urls.py  views.py
ai_bot/: admin.py  models.py  services.py  urls.py  views.py
ai_bot/knowledge/: ai-operational-knowledge.md  bike-details.md  contact.md  index.md  terms.md
ai_bot/migrations/: 0001_initial.py
ai_bot/templatetags/: chat_tags.py
ai_bot/tests/: conftest.py  test_models.py  test_services.py  test_views.py
core/: admin.py  convert_to_webp.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_pageimages.py  0004_bikeinstance_remove_reservation_bike_and_more.py  0006_remove_bikemodel_available_sizes.py  0007_alter_bikeinstance_bike_img_and_more.py  0008_delete_pageimages.py  0009_bikemodel_slug.py  0010_bikemodel_model_description.py  0011_alter_reservation_total_cost.py  0012_profile.py  0013_profile_profile_picture.py  0014_stravaactivity.py  0015_stravaactivity_summary_polyline.py  0016_stravaactivity_updated_at.py  0017_alter_bikeinstance_bike_img.py  0017_alter_chatmessage_options_and_more.py  0017_delete_chatmessage.py  0018_alter_reservation_bike_instance_and_more.py
core/templates/: base.html  bike-details.html  bikes.html  contact.html  data-deletion.html  footer.html  index.html  (+9 more)
(+37 files in other folders)
